solve some extra regex exercises

--- a/03-advanced-data-handling-regex-json/personal-extra.ipynb
+++ b/03-advanced-data-handling-regex-json/personal-extra.ipynb
@@ -3361,7 +3361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "id": "9118f646",
    "metadata": {},
    "outputs": [],
@@ -3387,7 +3387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 8,
    "id": "6db55d53",
    "metadata": {},
    "outputs": [],
@@ -3397,7 +3397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 9,
    "id": "503289ed",
    "metadata": {},
    "outputs": [
@@ -3424,7 +3424,7 @@
     "    r\"(\\d{3})\"  # group 2, first number\n",
     "    r\"((?(1)\\)))\"  # group 3, optional closing parenthesis\n",
     "    r\"((?(1) |[. -]))\"  # group 4, first delimiter\n",
-    "    r\"\\d{3}\"  # non-capturing group, second number\n",
+    "    r\"\\d{3}\"  # no-group, second number\n",
     "    r\"((?(1)[ .-]|\\4)\\d{4})(?=\\s)\"  # group 5, second delimiter and third number\n",
     ")\n",
     "\n",
@@ -3446,6 +3446,349 @@
     "\n",
     "print(re.sub(pattern, replacer, text))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7ede2aa",
+   "metadata": {},
+   "source": [
+    "You’re given a list of strings like:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e80aeed4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    \"Order # 123 - User : ID_034   |    2024-06-01\",\n",
+    "    \"Order#456-User:ID_876|2023-12-11\",\n",
+    "    \"Order   #789 -   User :ID_999|2022-03-05\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cde0919",
+   "metadata": {},
+   "source": [
+    "✅ Goal: Clean and reformat each entry into this format:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a749fd50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'order_id=123,user_id=034,date=2024-06-01'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"order_id=123,user_id=034,date=2024-06-01\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416127e0",
+   "metadata": {},
+   "source": [
+    "🔧 Rules:\n",
+    "Use re.sub with a function\n",
+    "\n",
+    "You can assume the structure/order is consistent (order → user → date), just messy\n",
+    "\n",
+    "Preserve leading zeroes in IDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2feef623",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_format = 'order_id={group1},user_id={group2},date={group3}'\n",
+    "\n",
+    "# TODO: \n",
+    "# - My goal is to retrieve the whole string and replace it with the new one\n",
+    "# - This will perform some kind of validation also\n",
+    "# - Group data into 3 groups\n",
+    "# - Use a function to plug the group values into the target format\n",
+    "# - Use re.sub with that function on the original text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3451d727",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    \"Order # 123 - User : ID_034   |    2024-06-01\",\n",
+    "    \"Order#456-User:ID_876|2023-12-11\",\n",
+    "    \"Order   #789 -   User :ID_999|2022-03-05\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "140ce792",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['order_id=123,user_id=034,date=2024-06-01',\n",
+       " 'order_id=456,user_id=876,date=2023-12-11',\n",
+       " 'order_id=789,user_id=999,date=2022-03-05']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# - Orders have a # prefix with some space perhaps in between\n",
+    "# - Users id have a ID_ prefix\n",
+    "# - dates have a | prefix with spaces, but clean format YYYY-MM-DD\n",
+    "pattern = r'^.*?#\\s*(\\d{3}).*?ID_(\\d{3})\\s*\\|\\s*([12]\\d{3}-\\d{2}-\\d{2})$'\n",
+    "from datetime import datetime, date\n",
+    "def replacer(match: re.Match) -> str:\n",
+    "    if len(match.groups()) != 3:\n",
+    "        print('not all values were found')\n",
+    "        return match.group(0)\n",
+    "    try:\n",
+    "        date_ = datetime.strptime(match.group(3), '%Y-%m-%d')\n",
+    "    except ValueError:\n",
+    "        print('invalid date')\n",
+    "        return match.group(0)\n",
+    "    else:\n",
+    "        return f'order_id={match.group(1)},user_id={match.group(2)},date={match.group(3)}'\n",
+    "    \n",
+    "[re.sub(pattern, replacer, string) for string in data]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2114dd8",
+   "metadata": {},
+   "source": [
+    "🧩 Regex Puzzle: Multiple Records per String\n",
+    "Now imagine each string may contain multiple entries (same structure), like:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6833404f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [\n",
+    "    \"Order#123-User:ID_034|2024-06-01;Order#124-User:ID_035|2024-06-02\",\n",
+    "    \"Order#125-User:ID_111|2023-12-25\",\n",
+    "    \"Order#126-User:ID_222|2022-02-29;Order#127-User:ID_333|2021-11-11\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "762a33fd",
+   "metadata": {},
+   "source": [
+    "✅ Your Goal:\n",
+    "For each string, extract all valid entries, reformat them as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dec53bd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"order_id=123,user_id=034,date=2024-06-01\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eb34e4e",
+   "metadata": {},
+   "source": [
+    "⚠️ Invalid entries (bad date, wrong format) should be skipped or passed through."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "157dc11b",
+   "metadata": {},
+   "source": [
+    "💡 Tips:\n",
+    "You'll want to use re.findall() or re.finditer() instead of re.sub()\n",
+    "\n",
+    "Still use datetime.strptime() for legit date validation\n",
+    "\n",
+    "This time you're collecting results, not replacing text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ff93320",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO:\n",
+    "# - Join data into one string with `;` as delimiter\n",
+    "# - Use finditer to grab results and groups\n",
+    "# - Check dates and load them into a new list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e5fe9411",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Order#123-User:ID_034|2024-06-01;Order#124-User:ID_035|2024-06-02;Order#125-User:ID_111|2023-12-25;Order#126-User:ID_222|2022-02-29;Order#127-User:ID_333|2021-11-11'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined_data = ';'.join(data)\n",
+    "joined_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "aad97815",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern = r'#\\s*(\\d{3}).*?ID_(\\d{3})\\s*\\|\\s*([12]\\d{3}-\\d{2}-\\d{2})'\n",
+    "retrieved_records = re.findall(pattern, joined_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "47917391",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "invalid date,record skipped 2022-02-29\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_records = []\n",
+    "for record in retrieved_records:\n",
+    "    try:\n",
+    "        datetime.strptime(record[2], '%Y-%m-%d')\n",
+    "    except ValueError:\n",
+    "        print('invalid date,record skipped', record[2])\n",
+    "    else:\n",
+    "        clean_records.append(f'order_id={record[0]},user_id={record[1]},date={record[2]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3e604c69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['order_id=123,user_id=034,date=2024-06-01',\n",
+       " 'order_id=124,user_id=035,date=2024-06-02',\n",
+       " 'order_id=125,user_id=111,date=2023-12-25',\n",
+       " 'order_id=127,user_id=333,date=2021-11-11']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eed0e576",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Replace these values accordingly:\n",
+    "db_user = \"postgres\"\n",
+    "db_password = \"Password21!!!\"\n",
+    "db_host = \"localhost\"\n",
+    "db_port = \"5432\"\n",
+    "db_name = \"practice\"\n",
+    "\n",
+    "engine = create_engine(f\"postgresql://{db_user}:{db_password}@{db_host}:{db_port}/{db_name}\")\n",
+    "conn = engine.connect()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "547229f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "employees = [\n",
+    "    {\"id\": 1, \"name\": \"Alice\", \"manager_id\": None},\n",
+    "    {\"id\": 2, \"name\": \"Bob\", \"manager_id\": 1},\n",
+    "    {\"id\": 3, \"name\": \"Charlie\", \"manager_id\": 2},\n",
+    "    {\"id\": 4, \"name\": \"Dana\", \"manager_id\": 2},\n",
+    "    {\"id\": 5, \"name\": \"Eve\", \"manager_id\": 1}\n",
+    "]\n",
+    "# Convert to DataFrame\n",
+    "df = pd.DataFrame(employees)\n",
+    "\n",
+    "# Push DataFrame to the database\n",
+    "df.to_sql(\"employees\", engine, if_exists=\"replace\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7142b5a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
