some more correcrions on pandas-eda exercises

--- a/04-introduction-to-pandas-eda/day-1.ipynb.ipynb
+++ b/04-introduction-to-pandas-eda/day-1.ipynb.ipynb
@@ -962,23 +962,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 139,
    "id": "4c0e533c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "464"
+       "12"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['Global_Sales'] > 3]['Name'].count()"
+    "df[(df['Global_Sales'] > 3) & (df['Platform'] == 'PC')]['Name'].count()"
    ]
   },
   {
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 143,
    "id": "1b82837e",
    "metadata": {},
    "outputs": [
@@ -1182,19 +1182,19 @@
        "45      4.40      2.77      3.96         0.77         11.90          6.73  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_in_best_year = df[df['Year'] == games_per_year_sorted.head(1).index.to_list()[0]]\n",
+    "df_in_best_year = df[df['Year'] == games_per_year_sorted.head(1).index[0]]\n",
     "df_in_best_year.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 144,
    "id": "5d52a4e3",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1212,7 @@
        "Name: Name, dtype: int64"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 145,
    "id": "80941c07",
    "metadata": {},
    "outputs": [
@@ -1236,7 +1236,7 @@
        "Name: Name, dtype: int64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,14 +1244,6 @@
    "source": [
     "releases_per_platform_best_year.sort_values(ascending=False)[:1]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02c80912",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
