play around notebook md cell numbering, gitlab issue for pandas exercises day 1

--- a/04-introduction-to-pandas-eda/day-1.ipynb
+++ b/04-introduction-to-pandas-eda/day-1.ipynb
@@ -5,7 +5,7 @@
    "id": "3e9174da",
    "metadata": {},
    "source": [
-    "1. Open the video game sales using pandas. Check characteristics of the dataset. What is the shape of the dataset, what are the statistics of the columns, are there any NaNs?"
+    "##### 1. Open the video game sales using pandas. Check characteristics of the dataset. What is the shape of the dataset, what are the statistics of the columns, are there any NaNs?"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "id": "36028d43",
    "metadata": {},
    "source": [
-    "2. Clean the dataset (if you find any NaNs)"
+    "##### 2. Clean the dataset (if you find any NaNs)"
    ]
   },
   {
@@ -45,7 +45,7 @@
    "id": "fc964986",
    "metadata": {},
    "source": [
-    "3. Which game has the highest global sales? What is its platform?"
+    "##### 3. Which game has the highest global sales? What is its platform?"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "id": "2085d6ed",
    "metadata": {},
    "source": [
-    "4. Which are the platforms in the dataset?"
+    "##### 4. Which are the platforms in the dataset?"
    ]
   },
   {
@@ -119,7 +119,7 @@
    "id": "7fc886d9",
    "metadata": {},
    "source": [
-    "5. Which are the top ten selling games for PS4 (Global sales)? Is this the same for Europe and Japan sales combined?"
+    "##### 5. Which are the top ten selling games for PS4 (Global sales)? Is this the same for Europe and Japan sales combined?"
    ]
   },
   {
@@ -1067,7 +1067,7 @@
    "id": "aa23cc04",
    "metadata": {},
    "source": [
-    "6. How many games were released for XOne in 2016? Which was the top selling game in Europe?"
+    "##### 6. How many games were released for XOne in 2016? Which was the top selling game in Europe?"
    ]
   },
   {
@@ -1517,7 +1517,7 @@
    "id": "d522b0b5",
    "metadata": {},
    "source": [
-    "7. Replace where XOne with ‘X Box One’"
+    "##### 7. Replace where XOne with ‘X Box One’"
    ]
   },
   {
@@ -1558,7 +1558,7 @@
    "id": "1e43576c",
    "metadata": {},
    "source": [
-    "8. How many PC games have higher sales than 3 million global sales?"
+    "##### 8. How many PC games have higher sales than 3 million global sales?"
    ]
   },
   {
@@ -1587,7 +1587,7 @@
    "id": "82f73677",
    "metadata": {},
    "source": [
-    "9. In which year the most games were released?"
+    "##### 9. In which year the most games were released?"
    ]
   },
   {
@@ -1671,7 +1671,7 @@
    "id": "0258965b",
    "metadata": {},
    "source": [
-    "10. Which platform had the most releases that year?"
+    "##### 10. Which platform had the most releases that year?"
    ]
   },
   {
