corrections on pandas-eda exercises

--- a/04-introduction-to-pandas-eda/day-1.ipynb
+++ b/04-introduction-to-pandas-eda/day-1.ipynb
@@ -32,12 +32,74 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "8adda37e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name              0\n",
+       "Platform          0\n",
+       "Year            271\n",
+       "Genre             0\n",
+       "Publisher        58\n",
+       "NA_Sales          0\n",
+       "EU_Sales          0\n",
+       "JP_Sales          0\n",
+       "Other_Sales       0\n",
+       "Global_Sales      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "6c26321f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# by default how='any' and subset=columns. This will eliminate null values from the dataframe\n",
     "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "749225d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name            0\n",
+       "Platform        0\n",
+       "Year            0\n",
+       "Genre           0\n",
+       "Publisher       0\n",
+       "NA_Sales        0\n",
+       "EU_Sales        0\n",
+       "JP_Sales        0\n",
+       "Other_Sales     0\n",
+       "Global_Sales    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
    ]
   },
   {
@@ -50,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e3629c27",
    "metadata": {},
    "outputs": [
@@ -83,6 +145,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e260931b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name            Wii Sports\n",
+       "Platform               Wii\n",
+       "Year                2006.0\n",
+       "Genre                    1\n",
+       "Publisher         Nintendo\n",
+       "NA_Sales             41.49\n",
+       "EU_Sales             29.02\n",
+       "JP_Sales              3.77\n",
+       "Other_Sales           8.46\n",
+       "Global_Sales         82.74\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "highest_selling_game = df.iloc[df['Global_Sales'].idxmax()]\n",
+    "highest_selling_game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f625ab45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Wii'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "highest_selling_game['Platform']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2085d6ed",
    "metadata": {},
@@ -92,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "93331803",
    "metadata": {},
    "outputs": [
@@ -111,7 +226,7 @@
     }
    ],
    "source": [
-    "df['Platform'].unique()"
+    "df[\"Platform\"].unique()"
    ]
   },
   {
@@ -1522,35 +1637,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "e74600a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "101      X Box One\n",
-       "193      X Box One\n",
-       "197      X Box One\n",
-       "260      X Box One\n",
-       "287      X Box One\n",
-       "           ...    \n",
-       "16530    X Box One\n",
-       "16531    X Box One\n",
-       "16562    X Box One\n",
-       "16569    X Box One\n",
-       "16576    X Box One\n",
-       "Name: Platform, Length: 213, dtype: object"
+       "array(['Wii', 'NES', 'GB', 'DS', 'X360', 'PS3', 'PS2', 'SNES', 'GBA',\n",
+       "       '3DS', 'PS4', 'N64', 'PS', 'XB', 'PC', '2600', 'PSP', 'XOne', 'GC',\n",
+       "       'WiiU', 'GEN', 'DC', 'PSV', 'SAT', 'SCD', 'WS', 'NG', 'TG16',\n",
+       "       '3DO', 'GG', 'PCFX'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "replace_xbox = df['Platform'].replace('XOne', 'X Box One')\n",
-    "replace_xbox[replace_xbox == 'X Box One']"
+    "replace_xbox[replace_xbox == 'X Box One']\n",
+    "df[\"Platform\"].unique()"
    ]
   },
   {
