finish bonus exercise for pandas-eda

--- a/04-introduction-to-pandas-eda/bonus.ipynb
+++ b/04-introduction-to-pandas-eda/bonus.ipynb
@@ -5591,7 +5591,39 @@
    "cell_type": "markdown",
    "id": "cc7b35ef",
    "metadata": {},
-   "source": []
+   "source": [
+    "To answer this I could separately group by each of the aforementioned fields, and find the max revenue index for each.  \n",
+    "Having said that, it seems to me,  that I would get a more precise result, if I were to group by the combination of all of the above, including the `is_discounted` boolean field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "200b4448",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Mobiles & Tablets', '55-64', 'M', 12, 'Sunday', True)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['category', 'age_group', 'Gender', 'order_month', 'week_day', 'is_discounted'])['total'].sum().idxmax()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b3c3fc4",
+   "metadata": {},
+   "source": [
+    "So, according to my analysis, an effective marketing campaign, would involve promoting products in the Mobiles & Tablets category on a December Sunday, targeting males of the age group of 55-64, and offering a discount."
+   ]
   }
  ],
  "metadata": {
