minor tweaks on pandas-eda exercises

--- a/04-introduction-to-pandas-eda/bonus.ipynb
+++ b/04-introduction-to-pandas-eda/bonus.ipynb
@@ -5598,7 +5598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "200b4448",
    "metadata": {},
    "outputs": [
@@ -5622,7 +5622,36 @@
    "id": "7b3c3fc4",
    "metadata": {},
    "source": [
-    "So, according to my analysis, an effective marketing campaign, would involve promoting products in the Mobiles & Tablets category on a December Sunday, targeting males of the age group of 55-64, and offering a discount."
+    "So, according to my analysis, an effective marketing campaign, would involve promoting products in the Mobiles & Tablets category on a December Sunday, targeting males of the age group of 55-64, and offering a discount. I would argue though, that discount benefits cannot be correctly assessed without taking into consideration the cost of the products. As an extreme example, just to showcase this, imagine we discounted a product down to its cost, and then sold insane amounts of it... The revenue would probably beat the non-discount (or light-discount) revenue, but the profit would be zero. With that into consideration, and the fact that we do not have access to costs in out datasets, I will also explore the behavior of sales, when no discount is offered."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "badfd220",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Mobiles & Tablets', '35-44', 'F', 8, 'Sunday')"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['is_discounted'] == False].groupby(['category', 'age_group', 'Gender', 'order_month', 'week_day'])['total'].sum().idxmax()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b7857d9",
+   "metadata": {},
+   "source": [
+    "This yields another result ('Mobiles & Tablets', '35-44', 'F', 8, 'Sunday'), and it might be a better indicator, but still, not as good as if we had access to the profit per sale."
    ]
   }
  ],
